--- a/hover.html
+++ b/hover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zapchast</title>
-    <link rel="stylesheet" href="hover.css">
+    <link rel="stylesheet" href="css/hover.css">
 </head>
 <body>
     <header>
@@ -34,42 +34,42 @@
             </div>
             <div class="zapchast-container">
                 <div class="zapchast-item">
-                    <img src="disk.jpeg" alt="part1" class="car-suret-1">
+                    <img src="images/disk.jpeg" alt="part1" class="car-suret-1">
                     <h3>Тормозные диски</h3>
                     <p>Цена: 50 000 ₸</p>
                     <a href=""><button class="afisha-btn-item">Купить</button>
                     </a>
                 </div>
                 <div class="zapchast-item">
-                    <img src="filtr.jpeg" alt="part2" class="car-suret-1">
+                    <img src="images/filtr.jpeg" alt="part2" class="car-suret-1">
                     <h3>Фильтр двигателя</h3>
                     <p>Цена: 10 000 ₸</p>
                     <a href=""><button class="afisha-btn-item">Купить</button>
                     </a>
                 </div>
                 <div class="zapchast-item">
-                    <img src="mator.jpeg" alt="" class="car-suret-1" >
+                    <img src="images/mator.jpeg" alt="" class="car-suret-1" >
                     <h3>Двигателья на Запчасти</h3>
                     <p>Цена: мин.50 000 ₸</p>
                     <a href=""><button class="afisha-btn-item">Купить</button>
                     </a>
                 </div>
                 <div class="zapchast-item">
-                    <img src="glushak.jpg" alt=""  class="car-suret-1"> 
+                    <img src="images/glushak.jpg" alt=""  class="car-suret-1"> 
                     <h3>Глушитель</h3>
                     <p>Цена: 35 000 ₸</p>
                     <a href=""><button class="afisha-btn-item">Купить</button>
                     </a>
                 </div>
                 <div class="zapchast-item">
-                    <img src="/amartizator.webp" alt="" class="car-suret-1">
+                    <img src="images/amartizator.webp" alt="" class="car-suret-1">
                     <h3>Амартизатор машины</h3>
                     <p>50 000 ₸</p>
                     <a href=""><button class="afisha-btn-item">Купить</button>
                     </a>
                 </div>
                 <div class="zapchast-item">
-                    <img src="/rul-toyota.jpg" alt="" class="car-suret-1">
+                    <img src="images/rul-toyota.jpg" alt="" class="car-suret-1">
                     <h3>Руль машины(TAYOTA)</h3>
                     <p>40 000 ₸</p>
                     <a href=""><button class="afisha-btn-item">Купить</button>
